--- a/server-side/app/views/messages/home.html.erb
+++ b/server-side/app/views/messages/home.html.erb
@@ -14,10 +14,6 @@
   <h6>Please don't hack me</h6>
   <input id="text-message" type="text" name="" value="" placeholder="Enter a text message here" style="width: 500px">
   <canvas id="draw" style="border: 2px solid black"></canvas>
-  <!-- <form action="{{url_for('printpicture')}}", method="post">
-    <input type="text" name="data-url" #style="display: none;" id="data-box">
-    <input type="submit" name="submit" value="Do Something">
-  </form> -->
   <br>
   <input type="submit" name="submit" value="Send!" onclick="submitMessage()">
 
@@ -38,9 +34,9 @@
   context.lineWidth = 4.5;
 
 
-  let isDrawing = false;
-  let lastX = 0;
-  let lastY = 0;
+  var isDrawing = false;
+  var lastX = 0;
+  var lastY = 0;
 
   function draw(e) {
     if(!isDrawing) return;
