--- a/server-side/app/views/messages/home.html.erb
+++ b/server-side/app/views/messages/home.html.erb
@@ -1,73 +1,154 @@
 <head>
-  <script src="https://use.fontawesome.com/65d9fe91cb.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
   <!-- <link type="text/javascript" href="jquery-3.2.1.min.js"> -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css">
+
+  <script src="https://unpkg.com/konva@2.4.2/konva.min.js"></script>
+
+  <style media="screen">
+    .konvajs-content {
+      margin: 0 auto;
+    }
+
+    canvas {
+      outline: 2px solid black;
+    }
+  </style>
+
 </head>
-<body style="text-align: center">
+<body style="text-align: center; touch-action: none;">
   <% flash.each do |key, value| %>
     <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
 
   <h1>Send Nate a message!</h1>
   <h6>Please don't hack me</h6>
-  <canvas id="draw" style="border: 2px solid black"></canvas>
   <br>
-  <input id="text-message" type="text" name="" value="" placeholder="Enter a text message here" style="width: 500px">
+  <input id="text-message" type="text" name="" value="" placeholder="Enter a text message here (not working currently!)" style="width: 500px;">
   <br>
-  <input type="submit" name="submit" value="Send!" onclick="submitMessage()">
+  Tool:
+    <select style="width: 100px;" id="tool">
+      <option value="brush">Brush</option>
+      <option value="eraser">Eraser</option>
+    </select>
+    <div id="container"></div>
+    <script>
+      var width = 500;
+      var height = 500;
 
-</body>
+      // first we need Konva core things: stage and layer
+      var stage = new Konva.Stage({
+        container: 'container',
+        width: width,
+        height: height
+      });
 
-<script type="text/javascript">
-  var canvas = document.querySelector('#draw');
-  canvas.width = 500;
-  canvas.height = 500;
-  var context = canvas.getContext('2d');
-  context.fillStyle = "#ffffff";
-  context.fillRect(0, 0, canvas.width, canvas.height);
-  // context.translate(0, 0.5);
-
-  context.strokeStyle = '#000000';
-  context.lineJoin = 'round';
-  context.lineCap = 'round';
-  context.lineWidth = 4.5;
+      var layer = new Konva.Layer();
+      stage.add(layer);
 
 
-  var isDrawing = false;
-  var lastX = 0;
-  var lastY = 0;
+      // then we are going to draw into special canvas element
+      var canvas = document.createElement('canvas');
+      canvas.width = stage.width();
+      canvas.height = stage.height();
 
-  function draw(e) {
-    if(!isDrawing) return;
-    context.beginPath();
-    context.moveTo(lastX, lastY);
-    context.lineTo(e.offsetX, e.offsetY);
-    context.stroke();
-    lastX = e.offsetX;
-    lastY = e.offsetY;
-  }
+      // created canvas we can add to layer as "Konva.Image" element
+      var image = new Konva.Image({
+        image: canvas,
+        x: 0,
+        y: 0
+      });
+      layer.add(image);
+      stage.draw();
 
-  canvas.addEventListener('mousedown', (e) => {
-    isDrawing = true;
-    lastX = e.offsetX;
-    lastY = e.offsetY;
-  });
-  canvas.addEventListener('mousemove', draw);
-  canvas.addEventListener('mouseup', () => {
-    isDrawing = false;
-  });
-  canvas.addEventListener('mouseout', () => isDrawing = false);
+      // Good. Now we need to get access to context element
+      var context = canvas.getContext('2d');
+      context.strokeStyle = "#000";
+      context.lineJoin = "round";
+      context.lineWidth = 5;
 
-  function submitMessage() {
-    $.ajax({
-      url: "/messages",
-      type: "POST",
-      data: { message: {
-        text: $("#text-message").val(),
-        image: canvas.toDataURL()
-      }}
-    })
-  }
-</script>
+
+      var isPaint = false;
+      var lastPointerPosition;
+      var mode = 'brush';
+
+
+      // now we need to bind some events
+      // we need to start drawing on mousedown
+      // and stop drawing on mouseup
+      image.on('mousedown touchstart', function () {
+        isPaint = true;
+        lastPointerPosition = stage.getPointerPosition();
+
+      });
+
+      // will it be better to listen move/end events on the window?
+
+      stage.addEventListener('mouseup touchend', function () {
+        isPaint = false;
+      });
+
+      stage.addEventListener('mouseout', function() {
+        isPaint = false;
+      });
+
+      // and core function - drawing
+      stage.addEventListener('mousemove touchmove', function () {
+        if (!isPaint) {
+          return;
+        }
+
+        if (mode === 'brush') {
+          context.globalCompositeOperation = 'source-over';
+        }
+        if (mode === 'eraser') {
+          context.globalCompositeOperation = 'destination-out';
+        }
+        context.beginPath();
+
+        var localPos = {
+          x: lastPointerPosition.x - image.x(),
+          y: lastPointerPosition.y - image.y()
+        };
+        context.moveTo(localPos.x, localPos.y);
+        var pos = stage.getPointerPosition();
+        localPos = {
+          x: pos.x - image.x(),
+          y: pos.y - image.y()
+        };
+        context.lineTo(localPos.x, localPos.y);
+        context.closePath();
+        context.stroke();
+
+
+        lastPointerPosition = pos;
+        layer.batchDraw();
+      });
+
+
+
+      var select = document.getElementById('tool');
+      select.addEventListener('change', function () {
+        mode = select.value;
+      });
+
+    </script>
+
+    <br>
+    <input type="submit" name="submit" value="Send!" onclick="submitMessage()">
+
+  </body>
+
+  <script type="text/javascript">
+    function submitMessage() {
+      $.ajax({
+        url: "/messages",
+        type: "POST",
+        data: { message: {
+          text: $("#text-message").val(),
+          image: canvas.toDataURL()
+        }}
+      })
+    }
+  </script>
