No eraser for now

--- a/server-side/app/views/messages/home.html.erb
+++ b/server-side/app/views/messages/home.html.erb
@@ -30,7 +30,7 @@
   Tool:
     <select style="width: 100px;" id="tool">
       <option value="brush">Brush</option>
-      <option value="eraser">Eraser</option>
+      <!-- <option value="eraser">Eraser</option> -->
     </select>
     <div id="container"></div>
     <script>
