--- a/server-side/app/views/messages/home.html.erb
+++ b/server-side/app/views/messages/home.html.erb
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css">
 
   <script src="https://unpkg.com/konva@2.4.2/konva.min.js"></script>
+  <%# <%= javascript_include_tag('canvas-dither.js') %> %>
 
   <style media="screen">
     .konvajs-content {
@@ -27,7 +28,8 @@
   <br>
   <input id="text-message" type="text" name="" value="" placeholder="Enter a text message here" style="width: 500px;">
   <br>
-  Tool:
+  <div class="draw-a-picture" style="display: none">
+    Tool:
     <select style="width: 100px;" id="tool">
       <option value="brush">Brush</option>
       <!-- <option value="eraser">Eraser</option> -->
@@ -136,6 +138,56 @@
       });
 
     </script>
+  </div>
+  <div class="upload-a-picture">
+    <label>Upload an image:</label><br/>
+    <input type="file" id="imageLoader" name="imageLoader"/>
+    <br>
+    <canvas id="imageCanvas" width="500" height="500"></canvas>
+    <script>
+      var imageLoader = document.getElementById('imageLoader');
+      imageLoader.addEventListener('change', handleImage, false);
+      var canvas = document.getElementById('imageCanvas');
+      var ctx = canvas.getContext('2d');
+
+      function handleImage(e){
+        var reader = new FileReader();
+        reader.onload = function(event){
+          var img = new Image();
+
+          img.onload = function(){
+            console.log(img.width);
+            console.log(img.height);
+            if (img.width > img.height) {
+              let coeff = img.width / 500;
+              img.width = 500;
+              img.height = img.height / coeff;
+              console.log(img.width);
+              console.log(img.height);
+            } else if (img.height > img.width) {
+              let coeff = img.height / 500;
+              img.height = 500;
+              img.width = img.width / coeff;
+              console.log(img.width);
+              console.log(img.height);
+            }
+
+            canvas.width = img.width;
+            canvas.height = img.height;
+            ctx.drawImage(img, 0, 0, img.width, img.height);
+
+            // Convert to gray here
+            imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+            var cd = new CanvasDither();
+            grayImage = cd.grayscale(imageData)
+            ctx.putImageData(grayImage, 0, 0);
+          }
+          img.src = event.target.result;
+        }
+        reader.readAsDataURL(e.target.files[0]);
+      }
+    </script>
+  </div>
 
     <br>
     <input type="submit" name="submit" value="Send!" onclick="submitMessage()">
