Added sliders and such

--- a/server-side/app/views/layouts/application.html.erb
+++ b/server-side/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ServerSide</title>
+    <title>Send Nate a Message</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
